2007-12-09 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.defs: Strip poppler prefix from functions, make
        document_new_from_file actually work.

=== 0.6.0 ===
2007-11-12 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* Makefile.am: make distcheck happy removing old files
	* configure.ac: bump to version 0.6.0 (sync with poppler)

2007-11-04 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.defs: Implement fields for descriptors.

2007-11-04 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.defs: make poppler_document_new_from_file the default
	constructor for poppler.Document.

2007-11-02 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.defs: implement poppler.Action

2007-11-02 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.override: don't override poppler_document_find_dest and
	poppler_page_get_transition, ignore copy/free boxed methods.

2007-11-02 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.override:
	* poppler.defs: implement poppler.Dest as boxed type now.

2007-11-02 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.defs: implement poppler.ImageMapping and
	poppler.FormFieldMapping.

2007-11-02 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.override:
	* poppler.defs: implement poppler.PageTransition as boxed type now.

2007-11-02 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* arg-types.py: removed
	
	* poppler.override:
	* Makefile.am:
	* poppler.defs: implement poppler.Rectangle as boxed type now.

2007-11-02 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* poppler.defs: implement poppler.IndexIter

2007-11-02 Gian Mario Tagliaretti  <gianmt@gnome.org>

	* Makefile.am: Fix module naming, fixes #140731 patch by lutz

	* poppler.override: implement poppler.PageTransition

2007-09-05  Ali Afshar <aafshar@gmail.com>

	* popplermodule.c: Add constants

2007-09-05  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* popplermodule.c: fix build.

	* poppler.override: implement poppler.Page.get_size
